# progpow-rust

./: .gitignore  Cargo.toml  README.md
pp_full/: Cargo.toml  build.rs
pp_full/lib/: CMakeLists.txt  CMakeUserPresets.json  EthCompilerSettings.cmake  vcpkg.json
pp_full/lib/cmake/Hunter/: config.cmake
pp_full/lib/libdevcore/: CMakeLists.txt  Worker.h
pp_full/lib/libethash/: CMakeLists.txt  internal.c
pp_full/lib/libethash-cl/: CLMiner.cpp  CLMiner.h  CLMiner_kernel.cl  CMakeLists.txt
pp_full/lib/libethash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner.h  CUDAMiner_kernel.cu
pp_full/lib/libethcore/: CMakeLists.txt  EthashAux.cpp  EthashAux.h  miner.h  work.h
pp_full/lib/libexternal/: CMakeLists.txt  progpow.cpp  progpow.h
pp_full/lib/libprogpow/: ProgPow.cpp  ProgPow.h
pp_full/src/: ffi.rs  lib.rs  types.rs  utils.rs
pp_light/: Cargo.toml
pp_light/src/: cache.rs  compute.rs  keccak.rs  lib.rs  progpow.rs  seed_compute.rs  shared.rs
src/: lib.rs  types.rs
src/hardware/: cpu.rs  gpu.rs  mod.rs
