[package]
name = "progpow"
version = "0.1.0"
authors = ["Brick Abode <a@a.com>"]

[workspace]
members = ["pp_light", "pp_full"]

[dependencies]
libc = "0.2.58"
bigint = "4.4.1"
byteorder = "^0.5"
lazy_static = "1"
progpow_cpu = { path = "./pp_light" }

[build-dependencies]
bindgen = "0.37.0"
cmake = "0.1.40"
filetime = "0.2"

[dependencies.progpow_gpu]
path = "./pp_full"
features = ['ocl']

[features]
gpu = []
