[package]
name = "progpow"
version = "0.1.0"
authors = ["Brick Abode <epiccash@brickabode.com>"]

[dependencies]
libc = "0.2.58"
bigint = "4.4.1"
byteorder = "^0.5"
lazy_static = "1"
dirs = "1.0.3"
progpow_cpu = { path = "./pp_light" }


[build-dependencies]
bindgen = "0.37.0"
cmake = "0.1.52"
filetime = "0.2"

[dependencies.progpow_gpu_cuda]
package = "progpow_gpu"
path = "./pp_full"
features = ['cuda']
optional = true

[dependencies.progpow_gpu_opencl]
package = "progpow_gpu"
path = "./pp_full"
features = ['opencl']
optional = true

[features]
opencl = ["progpow_gpu_opencl"]
cuda = ["progpow_gpu_cuda"]
